--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -2,7 +2,23 @@
 layout: default
 ---
 
-<div class="project-body">
-    {{ page.content }}
-    <a href="{{ page.wikipedia-url }}">Read more about {{ page.title }} on Wikipedia</a>
-</div>
+<article class="post">
+
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title | escape }}</h1>
+  </header>
+
+  <div class="post-content">
+    {{ content }}
+  </div>
+
+</article>
+
+{% assign collection_name = page.collection %}
+{% assign collection = site.collections | where:"label", collection_name | first %}
+{% assign posts = site[collection_name] | where:"layout", "post" %}
+{% if posts.size > 0 %}
+<h3>The collection also available</h3>
+
+...<a href="feed.xml" class="rss-subscribe">via RSS</a>
+{% endif %}
