--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-{%- assign _posts = site.categories.[page.title] | sort: 'date' | reverse -%}
+{%- assign _posts = site.categories.test | sort: 'date' | reverse -%}
 {%- include header.html scrolly_nav=_posts -%}
 <!-- Main -->
 <div id="main">
