--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -8,6 +8,9 @@ layout: default
 	{%- if page.content != "" -%}
 		{%- include section.html title=page.title photo=page.cover-photo photo-alt=page.cover-photo-alt auto-header=page.auto-header content=page.content -%}
 	{%- endif -%}
+	
+	<h1>Filed under {{ page.title }}</h1>
+	
 	<!-- Posts List -->
 	{%- for _post in _posts -%}
 		{%- capture _title -%}
