--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,23 +5,6 @@
 
 <!-- Nav -->
 <nav id="nav">
-<!-- <div class="trigger"> -->
-  <!-- {% assign collections = site.collections | sort: 'sequence' %} -->
-  <!-- {% for collection in collections %} -->
-    <!-- {% if collection.title %} -->
-    <!-- <a class="page-link" href="{{ collection.label | relative_url }}">{{ collection.title | escape }}</a> -->
-    <!-- {% endif %} -->
-  <!-- {% endfor %} -->
-<!-- </div> -->
-<ul class="listing">
-    {% assign projects = site.projects | where: "featured", "true" | sort: 'featured-priority' %}
-    {% for project in projects %}
-    <li>
-        <h3>{{ project.title }}</h3>
-        <a href="{{ project.url }}">Learn about {{ project.title }}</a>
-    </li>
-    {% endfor %}
-</ul>
   <ul>
     {%- assign _pages = site.html_pages | where_exp: "page", "page.hide != true" -%}
     {%- unless _pages == null -%}
@@ -69,4 +52,13 @@
       {%- endfor -%}
     {%- endunless -%}
   </ul>
+  <ul class="listing">
+    {% assign projects = site.projects | where: "featured", "true" | sort: 'featured-priority' %}
+    {% for project in projects %}
+    <li>
+        <h3>{{ project.title }}</h3>
+        <a href="{{ project.url }}">{{ project.title }}</a>
+    </li>
+    {% endfor %}
+</ul>
 </nav>
